@@ -36,49 +36,20 @@
 <table class="main" align="center" border="0" cellpadding="0" cellspacing="0">
   <tr height="30">
     <td height="50" align="center" colspan="2">
-      <!-- Navigation using remote keys: Home, PageUP/PageDown (First/Last), Prev/Next & Left/Right (Previous/Next) -->
+      <!-- Navigation using remote keys: Home, PageUP/PageDown (Previous/Next) -->
       <a>
         <xsl:attribute name="TVID">HOME</xsl:attribute>
         <xsl:attribute name="href"><xsl:value-of select="//preferences/homePage" /></xsl:attribute>
       </a>
-
-      <a>
-        <xsl:attribute name="TVID">PGUP</xsl:attribute>
-        <xsl:attribute name="href"><xsl:value-of select="first" />.html</xsl:attribute>
-      </a>
-      <a>
-        <xsl:attribute name="TVID">PGDN</xsl:attribute>
-        <xsl:attribute name="href"><xsl:value-of select="last" />.html</xsl:attribute>
-      </a>
-
-      <a name="goright" onfocusload="">
-        <xsl:if test="count(files/file) = 1">
-          <xsl:attribute name="TVID">RIGHT</xsl:attribute>
-        </xsl:if>
-        <xsl:attribute name="href">
-          <xsl:choose><xsl:when test="contains(next,'UNKNOWN')"><xsl:value-of select="first"/>.html</xsl:when><xsl:otherwise><xsl:value-of select="next"/>.html</xsl:otherwise></xsl:choose>
-        </xsl:attribute>
-      </a>
-      <a name="goleft" onfocusload="">
-        <xsl:if test="count(files/file) = 1">
-          <xsl:attribute name="TVID">LEFT</xsl:attribute>
-        </xsl:if>
-        <xsl:attribute name="href">
-          <xsl:choose><xsl:when test="contains(previous,'UNKNOWN')"><xsl:value-of select="//preferences/homePage"/></xsl:when><xsl:otherwise><xsl:value-of select="last"/>.html</xsl:otherwise></xsl:choose>
-        </xsl:attribute>
-      </a>
-
-      <a>
-        <xsl:attribute name="TVID">PREV</xsl:attribute>
+      <a TVID="PGDN">
         <xsl:attribute name="href"><xsl:choose><xsl:when
           test="contains(next,'UNKNOWN')"><xsl:value-of select="first" />.html</xsl:when><xsl:otherwise><xsl:value-of
           select="next" />.html</xsl:otherwise></xsl:choose></xsl:attribute>
       </a>
-      <a>
-        <xsl:attribute name="TVID">NEXT</xsl:attribute>
+      <a TVID="PGUP">
         <xsl:attribute name="href"><xsl:choose><xsl:when
-          test="contains(previous,'UNKNOWN')"><xsl:value-of select="//preferences/homePage" /></xsl:when><xsl:otherwise><xsl:value-of
-          select="last" />.html</xsl:otherwise></xsl:choose></xsl:attribute>
+          test="contains(previous,'UNKNOWN')"><xsl:value-of select="last" />.html</xsl:when><xsl:otherwise><xsl:value-of
+          select="previous" />.html</xsl:otherwise></xsl:choose></xsl:attribute>
       </a>
     </td>
   </tr>
