@@ -53,6 +53,7 @@ MovieJukebox 1.0.17 beta
   - Fixed defect #734 Fix for Sratim plugin - Hebrew string comparison failure bugs
   - Fixed defect #739 Crash when mjb.categories.indexList not specified
   - Fixed defect #741 Ignore mjb.categories.minCategoriesCount for all of the old (pre-226) categories
+  - Fixed defect #744 Fix navigation for gfb107-sd and hebrew skins, fix css for movie title
 
 
 MovieJukebox 1.0.16 beta
